--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My-site</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="static/styles/style.css" />
     <link rel="icon" href="static/images/favicon.png" type="image/png">
 
 </head>
@@ -261,6 +261,5 @@
         <p>© 2025 Компания</p>
     </footer>
 </body>
-
 
 </html>
