--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My-site</title>
-    <link rel="stylesheet" href="static/styles/style.css" />
-    <link rel="icon" href="static/images/favicon.png" type="image/png">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.png" type="image/png">
 
 </head>
 <script>
@@ -164,7 +164,7 @@
         <div class="images">
             <img src="https://cdn.completeaitraining.com/news_images/workday-unveils-illuminate-ai-agents-and-flex-credits-to-streamline-hr-and-finan_2025-09-21.jpg"
                 alt="фото" />
-            <img src="static/images/photo_2025-10-17_14-50-58.jpg" alt="фото" />
+            <img src="photo_2025-10-17_14-50-58.jpg" alt="фото" />
             <div class="third">
                 <img src="https://img.freepik.com/free-vector/calculator-with-number-financial-deal-confirming-with-handshake-calculating-operation-audit-venture-capital-economical-partnership-vector-isolated-concept-metaphor-illustration_335657-4317.jpg"
                     alt="фото" />
@@ -261,5 +261,6 @@
         <p>© 2025 Компания</p>
     </footer>
 </body>
+
 
 </html>
