--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 
 <body>
     <header class="navbar">
-        <div class="logo">
-            <img src="static/images/logo.png" alt="Логотип" class="logo-img">
-            Компания
-        </div>
+        <div class="logo">Компания</div>
         <button class="nav-toggle" aria-label="Меню">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -264,3 +261,4 @@
 
 
 </html>
+
